[gd_scene load_steps=36 format=3 uid="uid://c2xtlqetfh7qg"]

[ext_resource type="Script" uid="uid://sluopl7cih7x" path="res://scenes/quests/story_quests/fox-tale/fox-tale_global_assets/player/fox-tale_player.gd" id="1_qwt1m"]
[ext_resource type="SpriteFrames" uid="uid://dmmtp1umdxbg0" path="res://scenes/quests/story_quests/fox-tale/fox-tale_player_components/fox-tale_player.tres" id="2_5b8im"]
[ext_resource type="Texture2D" uid="uid://dxaq5piwxqnht" path="res://scenes/game_elements/characters/player/components/dust.png" id="2_shbp1"]
[ext_resource type="Script" uid="uid://bgg31bvwiq6bi" path="res://scenes/quests/story_quests/fox-tale/fox-tale_global_assets/player/additional_scripts/fox_player_dust_particles.gd" id="3_g1827"]
[ext_resource type="Script" uid="uid://d3vxg6supcrv3" path="res://scenes/quests/story_quests/fox-tale/fox-tale_global_assets/player/additional_scripts/fox_player_sprite.gd" id="5_shbp1"]
[ext_resource type="Script" uid="uid://co1mcxttibrq5" path="res://scenes/quests/story_quests/fox-tale/fox-tale_global_assets/player/additional_scripts/fox_player_interaction.gd" id="5_vjbr7"]
[ext_resource type="Script" uid="uid://necvar42rnih" path="res://scenes/game_elements/characters/player/components/interact_zone.gd" id="7_vkq68"]
[ext_resource type="Script" uid="uid://snw1mp83wryr" path="res://scenes/quests/story_quests/fox-tale/fox-tale_global_assets/player/additional_scripts/fox_player_fighting.gd" id="8_rjbp8"]
[ext_resource type="PackedScene" uid="uid://yfpfno276rol" path="res://scenes/game_elements/props/fixed_size_label/fixed_size_label.tscn" id="8_rv1jh"]
[ext_resource type="Texture2D" uid="uid://dda0lxfswrncy" path="res://scenes/game_elements/characters/player/components/blow.png" id="10_cgi8o"]
[ext_resource type="AudioStream" uid="uid://crfylo055wa8e" path="res://scenes/game_elements/characters/player/components/blow.wav" id="11_p1ldb"]
[ext_resource type="Script" uid="uid://ceh2qrdkyak82" path="res://scenes/quests/story_quests/fox-tale/fox-tale_global_assets/player/additional_scripts/animation_fox_player.gd" id="11_rjbp8"]
[ext_resource type="AudioStream" uid="uid://cx6jv2cflrmqu" path="res://assets/third_party/sounds/characters/player/Foot.ogg" id="13_pevkc"]
[ext_resource type="Script" uid="uid://b6avhli0bo1de" path="res://scenes/quests/story_quests/fox-tale/fox-tale_global_assets/player/additional_scripts/ui_player.gd" id="14_72ami"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_a86xl"]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 5
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id="Curve_301ac"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1e-05, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -1.71104, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_j0tly"]
curve = SubResource("Curve_301ac")

[sub_resource type="CurveXYZTexture" id="CurveXYZTexture_3in67"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_746yg"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 25.0
spread = 0.0
initial_velocity_min = -40.0
initial_velocity_max = -10.0
directional_velocity_min = 1.0
directional_velocity_max = 1.0
directional_velocity_curve = SubResource("CurveXYZTexture_3in67")
gravity = Vector3(0, 0, 0)
scale_max = 1.5
alpha_curve = SubResource("CurveTexture_j0tly")
anim_speed_min = 1.0
anim_speed_max = 1.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0abc6"]
radius = 9.0
height = 46.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e0ql6"]
size = Vector2(110, 99)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t84sn"]
size = Vector2(32, 47)

[sub_resource type="CircleShape2D" id="CircleShape2D_kd5pr"]
radius = 20.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_1cosw"]
blend_mode = 1

[sub_resource type="Animation" id="Animation_wvgcx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../PlayerSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_4ypcv"]
resource_name = "got_hit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../PlayerSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1n58k"]
_data = {
&"RESET": SubResource("Animation_wvgcx"),
&"got_hit": SubResource("Animation_4ypcv")
}

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_kq2hc"]
closed = false
cull_mode = 1
polygon = PackedVector2Array(7, 7, 24, -20, 14, -49, -3, -74, -17, -61, -17, -42, -31, -42, -27, -8, 6, 7)

[sub_resource type="Animation" id="Animation_0owmy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"idle"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerFighting/AirStream/AirStreamCollision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerFighting/AirStream/AirStreamCollision:shape:radius")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [20.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerFighting/AirStream:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -24)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PlayerFighting/AirStream/Sprite2D:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("PlayerFighting/AirStream/Sprite2D:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.12577, 0.12577)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("PlayerFighting/AirStream/Sprite2D:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_u5klv"]
resource_name = "blow"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerFighting/AirStream/AirStreamCollision:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 0, 0, 1, 2, 3, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerSprite:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"attack_01"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerFighting/AirStream/AirStreamCollision:shape:radius")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.3, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [20.0, 150.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PlayerFighting/AirStream:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -24)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PlayerFighting/AirStream/Sprite2D:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("PlayerFighting/AirStream/Sprite2D:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.3, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.12577, 0.12577), Vector2(1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("PlayerFighting/AirStream/Sprite2D:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.3, 0.5, 0.6),
"transitions": PackedFloat32Array(2, 0.5, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.456), Color(1, 1, 1, 0)]
}
tracks/8/type = "audio"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("PlayerFighting/AirStream/AudioStreamPlayer2D")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("11_p1ldb")
}],
"times": PackedFloat32Array(0.3)
}
tracks/8/use_blend = true

[sub_resource type="Animation" id="Animation_blfj0"]
resource_name = "defeated"
length = 1.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"defeated"]
}

[sub_resource type="Animation" id="Animation_75vfm"]
resource_name = "idle"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"idle"]
}

[sub_resource type="Animation" id="Animation_qek5x"]
resource_name = "walk"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"walk"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WalkSound:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.115043, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qek5x"]
_data = {
&"RESET": SubResource("Animation_0owmy"),
&"blow": SubResource("Animation_u5klv"),
&"defeated": SubResource("Animation_blfj0"),
&"idle": SubResource("Animation_75vfm"),
&"walk": SubResource("Animation_qek5x")
}

[sub_resource type="LabelSettings" id="LabelSettings_shbp1"]
font_size = 42

[node name="PlayerFox" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_qwt1m")
sprite_frames = ExtResource("2_5b8im")

[node name="PlayerDustParticles" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.498039)
material = SubResource("CanvasItemMaterial_a86xl")
position = Vector2(0, 22)
amount = 6
texture = ExtResource("2_shbp1")
lifetime = 0.5
randomness = 0.6
fixed_fps = 10
process_material = SubResource("ParticleProcessMaterial_746yg")
script = ExtResource("3_g1827")

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -17)
sprite_frames = ExtResource("2_5b8im")
animation = &"idle"
autoplay = "idle"
script = ExtResource("5_shbp1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, 26)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_0abc6")

[node name="PlayerInteraction" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 6)
script = ExtResource("5_vjbr7")

[node name="InteractZone" type="Area2D" parent="PlayerInteraction"]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 32
script = ExtResource("7_vkq68")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerInteraction/InteractZone"]
position = Vector2(47, -20.5)
shape = SubResource("RectangleShape2D_e0ql6")

[node name="InteractMarker" type="Marker2D" parent="PlayerInteraction"]
unique_name_in_owner = true
position = Vector2(-1, -116)

[node name="InteractLabel" parent="PlayerInteraction/InteractMarker" instance=ExtResource("8_rv1jh")]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 11.0
offset_right = 1.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerFighting" type="Node2D" parent="."]
unique_name_in_owner = true
process_mode = 4
visible = false
script = ExtResource("8_rjbp8")

[node name="HitBox" type="Area2D" parent="PlayerFighting"]
unique_name_in_owner = true
collision_layer = 64
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerFighting/HitBox"]
position = Vector2(0, -28.5)
shape = SubResource("RectangleShape2D_t84sn")
debug_color = Color(0.94902, 0.231373, 0, 0.419608)

[node name="AirStream" type="Area2D" parent="PlayerFighting"]
unique_name_in_owner = true
position = Vector2(0, -24)
collision_layer = 0
collision_mask = 256

[node name="AirStreamCollision" type="CollisionShape2D" parent="PlayerFighting/AirStream"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_kd5pr")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="PlayerFighting/AirStream"]
visible = false
material = SubResource("CanvasItemMaterial_1cosw")
scale = Vector2(0.12577, 0.12577)
texture = ExtResource("10_cgi8o")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="PlayerFighting/AirStream"]

[node name="GotHitAnimation" type="AnimationPlayer" parent="PlayerFighting"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_1n58k")
}

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
visible = false
occluder = SubResource("OccluderPolygon2D_kq2hc")
sdf_collision = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_qek5x")
}
script = ExtResource("11_rjbp8")

[node name="WalkSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("13_pevkc")
volume_db = -5.0
pitch_scale = 7.0
bus = &"SFX"

[node name="UIPlayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true
script = ExtResource("14_72ami")

[node name="HealthLabel" type="Label" parent="UIPlayer"]
offset_right = 75.0
offset_bottom = 23.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Vida: 100"
label_settings = SubResource("LabelSettings_shbp1")
